[build-system]
requires = ["setuptools>=61.0", "versioningit"]
build-backend = "setuptools.build_meta"

[project]
name = "fah-db"
#version = "0.0.1"
dynamic = ["version"]
authors = [
  { name="Alex Payne", email="alex.payne@choderalab.org" },
]
description = "A tool for managing a database of input structures for Folding@home."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
dependencies = ["pydantic", "tqdm", "pandas"]

[project.urls]
"Homepage" = "https://github.com/chodederlab/fah-db"
"Bug Tracker" = "https://github.com/chodederlab/fah-db/issues"

[project.scripts]

[tool.setuptools.packages.find]
where = ["."]

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
method = "git"
match = ["*"]
default-tag = "0.0.0"
